syntax = "proto3";
package user.v1;

option go_package = "github.com/quemin2402/user-service/proto;userpb";

message User {
  string id       = 1;
  string username = 2;
  string email    = 3;
}

message UserRequest  { string username = 1; string email = 2; string password = 3; }
message AuthRequest  { string username = 1; string password = 2; }
message AuthResponse { string token = 1; }

message UserID       { string id = 1; }
message UserResponse { User user = 1; }

service UserService {
  rpc RegisterUser    (UserRequest) returns (UserResponse);
  rpc AuthenticateUser(AuthRequest) returns (AuthResponse);
  rpc GetUserProfile  (UserID)      returns (UserResponse);
}
